test/tests/functions/string/replace_regex_max_negative.txt
error: `max` must be at least 0, but got -1
 --> tests/functions/string/replace_regex_max_negative.tql:9:46
  |
9 | x = x.replace_regex("[0-9a-f]{2}", "??", max=-1)
  |                                              ^^ 
  |
